cicd/Backend Deployment Blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poticard-backend-blue
  labels:
    type: backend
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        type: backend
        version: blue
    spec:
      containers:
      - name: backend
        image: tahcy/potiback:0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "2048Mi"
