cicd/Backend Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP          # 생략해도 기본값
  selector:
    type: backend          # app=backend 라벨의 Pod에 연결
    version: blue
  ports:
  - port: 8080              # Service 포트
    targetPort: 8080     # Pod의 실제 포트
